# zephyr-modular-app

./: .gitignore  README.md
blink-driver-module/main/: Kconfig  Kconfig.defconfig  Kconfig.packages  packages.cmake
blink-driver-module/main/clang/gpio_led/: CMakeLists.txt  Kconfig.gpio_led  gpio_led.c
blink-driver-module/main/dts/bindings/blinkdriver/: blink-gpio-leds.yaml
blink-driver-module/main/include/blinkdriver/: blinkdriver.h
blink-driver-module/zephyr/: module.yaml
custom-ek-ra6m3-module/main/: CMakeLists.txt  Kconfig  Kconfig.packages  packages.cmake
custom-ek-ra6m3-module/zephyr/: module.yml
dummy-app/: CMakeLists.txt  build.toml  main.c  prj.conf
full-feature-module/main/: CMakeLists.txt  Kconfig  packages.cmake
full-feature-module/zephyr/: module.yaml
math-lib-module-w-codegen/main/clang/arithmetic/boolean/: boolean_operations.c
math-lib-module-w-codegen/main/clang/arithmetic/decimal/: decimal_operations.c
math-lib-module-w-codegen/main/include/arithmetic/boolean/: boolean_operations.h
math-lib-module-w-codegen/main/include/bitmath/: bit_operations.h
math-lib-module-w-codegen/test/clang/internal/: main.c
math-lib-module/main/: Kconfig.packages
math-lib-module/main/clang/arithmetic/boolean/: CMakeLists.txt
math-lib-module/main/clang/arithmetic/decimal/: CMakeLists.txt
math-lib-module/main/clang/bitmath/: CMakeLists.txt  bit_operations.c
math-lib-module/main/clang/internal/: CMakeLists.txt  internal_impl.c  internal_impl.h
math-lib-module/main/include/arithmetic/decimal/: decimal_operations.h
(+3 files in other folders)
